<resources>
    <string name="app_name">Suara fm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="popular">Popular Podcasts</string>
    <string name="sample_title">Start your ideas right now</string>
    <string name="sample_author">Jimmy O Jang</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search_podcast">Search Podcast</string>
    <string name="recently_uploaded">Recently Uploaded</string>
</resources>