<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.view.fragment.HomeFragment">

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/app_name"
                android:textColor="#292929"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="3dp"
                app:boxCornerRadiusBottomStart="3dp"
                app:boxCornerRadiusTopEnd="3dp"
                app:boxCornerRadiusTopStart="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brand"
                app:placeholderText="@string/search_podcast"
                app:placeholderTextColor="#535353"
                app:startIconDrawable="@drawable/ic_round_search_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchInputEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/popularHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/popular"
                android:textColor="#2E2E2E"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchInputLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularPodcastList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularHeading"
                tools:itemCount="6"
                tools:listitem="@layout/card_podcast" />

            <TextView
                android:id="@+id/secondHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/recently_uploaded"
                android:textColor="#2E2E2E"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularPodcastList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentlyUploadedList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:paddingHorizontal="@dimen/margin"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/secondHeading"
                tools:itemCount="5"
                tools:listitem="@layout/list_podcast" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>